--- a/messages/he/LC_MESSAGES/3166-2.po
+++ b/messages/he/LC_MESSAGES/3166-2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2020-05-19 14:57+0200\n"
-"PO-Revision-Date: 2021-04-07 13:26+0000\n"
+"PO-Revision-Date: 2021-05-11 04:22+0000\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-2/he/>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n == 1) ? 0 : ((n == 2) ? 1 : ((n > 10 && "
 "n % 10 == 0) ? 2 : 3));\n"
-"X-Generator: Weblate 4.6-dev\n"
+"X-Generator: Weblate 4.7-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -249,51 +249,51 @@ msgstr ""
 
 #. Name for AL-01, Name for AL-BR
 msgid "Berat"
-msgstr ""
+msgstr "בראט"
 
 #. Name for AL-02, Name for AL-DR
 msgid "Durrës"
-msgstr ""
+msgstr "דורס"
 
 #. Name for AL-03, Name for AL-EL
 msgid "Elbasan"
-msgstr ""
+msgstr "אלבסן"
 
 #. Name for AL-04, Name for AL-FR
 msgid "Fier"
-msgstr ""
+msgstr "פייר"
 
 #. Name for AL-05, Name for AL-GJ
 msgid "Gjirokastër"
-msgstr ""
+msgstr "ג׳ירוקסטרה"
 
 #. Name for AL-06, Name for AL-KO
 msgid "Korçë"
-msgstr ""
+msgstr "קורצ׳ה"
 
 #. Name for AL-07, Name for AL-KU
 msgid "Kukës"
-msgstr ""
+msgstr "קוקס"
 
 #. Name for AL-08, Name for AL-LE
 msgid "Lezhë"
-msgstr ""
+msgstr "לז׳ה"
 
 #. Name for AL-09, Name for AL-DI
 msgid "Dibër"
-msgstr ""
+msgstr "דיבר"
 
 #. Name for AL-10, Name for AL-SH
 msgid "Shkodër"
-msgstr ""
+msgstr "שקודרה"
 
 #. Name for AL-11, Name for AL-TR
 msgid "Tiranë"
-msgstr ""
+msgstr "טירנה"
 
 #. Name for AL-12, Name for AL-VL
 msgid "Vlorë"
-msgstr ""
+msgstr "ולורה"
 
 #. Name for AL-BU
 msgid "Bulqizë"
@@ -1697,23 +1697,23 @@ msgstr ""
 
 #. Name for BH-13
 msgid "Al Manāmah (Al ‘Āşimah)"
-msgstr ""
+msgstr "הבירה"
 
 #. Name for BH-14
 msgid "Al Janūbīyah"
-msgstr ""
+msgstr "הדרום"
 
 #. Name for BH-15
 msgid "Al Muḩarraq"
-msgstr ""
+msgstr "מוחארק"
 
 #. Name for BH-16, Name for OM-WU
 msgid "Al Wusţá"
-msgstr ""
+msgstr "המרכז"
 
 #. Name for BH-17, Name for SD-NO
 msgid "Ash Shamālīyah"
-msgstr ""
+msgstr "הצפון"
 
 #. Name for BI-BB
 msgid "Bubanza"
@@ -1781,67 +1781,67 @@ msgstr ""
 
 #. Name for BJ-AK
 msgid "Atakora"
-msgstr ""
+msgstr "אטקורה"
 
 #. Name for BJ-AL
 msgid "Alibori"
-msgstr ""
+msgstr "אליבורי"
 
 #. Name for BJ-AQ
 msgid "Atlantique"
-msgstr ""
+msgstr "אטלנטיק"
 
 #. Name for BJ-BO
 msgid "Borgou"
-msgstr ""
+msgstr "בורגו"
 
 #. Name for BJ-CO
 msgid "Collines"
-msgstr ""
+msgstr "קולין"
 
 #. Name for BJ-DO
 msgid "Donga"
-msgstr ""
+msgstr "דונגה"
 
 #. Name for BJ-KO
 msgid "Kouffo"
-msgstr ""
+msgstr "קופו"
 
 #. Name for BJ-LI, Name for CM-LT
 msgid "Littoral"
-msgstr ""
+msgstr "ליטורל"
 
 #. Name for BJ-MO
 msgid "Mono"
-msgstr ""
+msgstr "מונו"
 
 #. Name for BJ-OU
 msgid "Ouémé"
-msgstr ""
+msgstr "אואם"
 
 #. Name for BJ-PL, Name for NG-PL
 msgid "Plateau"
-msgstr ""
+msgstr "פלטו"
 
 #. Name for BJ-ZO
 msgid "Zou"
-msgstr ""
+msgstr "זאו"
 
 #. Name for BN-BE
 msgid "Belait"
-msgstr ""
+msgstr "בלייט"
 
 #. Name for BN-BM
 msgid "Brunei-Muara"
-msgstr ""
+msgstr "בורניי ומוארה"
 
 #. Name for BN-TE
 msgid "Temburong"
-msgstr ""
+msgstr "טמבורונג"
 
 #. Name for BN-TU
 msgid "Tutong"
-msgstr ""
+msgstr "טוטונג"
 
 #. Name for BO-B
 msgid "El Beni"
@@ -4261,139 +4261,139 @@ msgstr ""
 
 #. Name for EG-ALX
 msgid "Al Iskandarīyah"
-msgstr ""
+msgstr "אלכסנדריה"
 
 #. Name for EG-ASN
 msgid "Aswān"
-msgstr ""
+msgstr "אסואן"
 
 #. Name for EG-AST
 msgid "Asyūt"
-msgstr ""
+msgstr "אסיוט"
 
 #. Name for EG-BA
 msgid "Al Bahr al Ahmar"
-msgstr ""
+msgstr "הים האדום"
 
 #. Name for EG-BH
 msgid "Al Buhayrah"
-msgstr ""
+msgstr "אל־בחירה"
 
 #. Name for EG-BNS
 msgid "Banī Suwayf"
-msgstr ""
+msgstr "בני סויף"
 
 #. Name for EG-C
 msgid "Al Qāhirah"
-msgstr ""
+msgstr "קהיר"
 
 #. Name for EG-DK
 msgid "Ad Daqahlīyah"
-msgstr ""
+msgstr "א־דקהלייה"
 
 #. Name for EG-DT
 msgid "Dumyāt"
-msgstr ""
+msgstr "דומיאט"
 
 #. Name for EG-FYM
 msgid "Al Fayyūm"
-msgstr ""
+msgstr "אל־פיום"
 
 #. Name for EG-GH
 msgid "Al Gharbīyah"
-msgstr ""
+msgstr "אל־ע׳רביה"
 
 #. Name for EG-GZ
 msgid "Al Jīzah"
-msgstr ""
+msgstr "אל־גיזה"
 
 #. Name for EG-HU
 msgid "Ḩulwān"
-msgstr ""
+msgstr "חלוואן"
 
 #. Name for EG-IS
 msgid "Al Ismā`īlīyah"
-msgstr ""
+msgstr "אסמאעיליה"
 
 #. Name for EG-JS
 msgid "Janūb Sīnā'"
-msgstr ""
+msgstr "דרום סיני"
 
 #. Name for EG-KB
 msgid "Al Qalyūbīyah"
-msgstr ""
+msgstr "אל־קליוביה"
 
 #. Name for EG-KFS
 msgid "Kafr ash Shaykh"
-msgstr ""
+msgstr "כפר א־שיח׳"
 
 #. Name for EG-KN
 msgid "Qinā"
-msgstr ""
+msgstr "קינא"
 
 #. Name for EG-MN
 msgid "Al Minyā"
-msgstr ""
+msgstr "אל־מניא"
 
 #. Name for EG-MNF
 msgid "Al Minūfīyah"
-msgstr ""
+msgstr "אל־מינופיה"
 
 #. Name for EG-MT
 msgid "Matrūh"
-msgstr ""
+msgstr "מטרוח"
 
 #. Name for EG-PTS
 msgid "Būr Sa`īd"
-msgstr ""
+msgstr "פורט סעיד"
 
 #. Name for EG-SHG
 msgid "Sūhāj"
-msgstr ""
+msgstr "סוהאג"
 
 #. Name for EG-SHR, Name for OM-SH, Name for SA-04
 msgid "Ash Sharqīyah"
-msgstr ""
+msgstr "א־שרקיה"
 
 #. Name for EG-SIN
 msgid "Shamal Sīnā'"
-msgstr ""
+msgstr "צפון סיני"
 
 #. Name for EG-SU
 msgid "As Sādis min Uktūbar"
-msgstr ""
+msgstr "שישה באוקטובר"
 
 #. Name for EG-SUZ
 msgid "As Suways"
-msgstr ""
+msgstr "סואץ"
 
 #. Name for EG-WAD
 msgid "Al Wādī al Jadīd"
-msgstr ""
+msgstr "אל־ואדי אל־גדיד"
 
 #. Name for ER-AN
 msgid "Ansabā"
-msgstr ""
+msgstr "אנסבה"
 
 #. Name for ER-DK
 msgid "Janūbī al Baḩrī al Aḩmar"
-msgstr ""
+msgstr "ים סוף דרומי"
 
 #. Name for ER-DU
 msgid "Al Janūbī"
-msgstr ""
+msgstr "הדרום"
 
 #. Name for ER-GB
 msgid "Qāsh-Barkah"
-msgstr ""
+msgstr "גאש־בארקה"
 
 #. Name for ER-MA
 msgid "Al Awsaţ"
-msgstr ""
+msgstr "המרכז"
 
 #. Name for ER-SK
 msgid "Shimālī al Baḩrī al Aḩmar"
-msgstr ""
+msgstr "ים סוף צפוני"
 
 #. Name for ES-A
 msgid "Alicante"
@@ -4425,7 +4425,7 @@ msgstr ""
 
 #. Name for ES-B
 msgid "Barcelona"
-msgstr ""
+msgstr "ברצלונה"
 
 #. Name for ES-BA
 msgid "Badajoz"
@@ -4657,47 +4657,47 @@ msgstr ""
 
 #. Name for ET-AA
 msgid "Ādīs Ābeba"
-msgstr ""
+msgstr "אדיס אבבה"
 
 #. Name for ET-AF
 msgid "Āfar"
-msgstr ""
+msgstr "עפר"
 
 #. Name for ET-AM
 msgid "Āmara"
-msgstr ""
+msgstr "אמהרה"
 
 #. Name for ET-BE
 msgid "Bīnshangul Gumuz"
-msgstr ""
+msgstr "בנישנגול-גומאז"
 
 #. Name for ET-DD
 msgid "Dirē Dawa"
-msgstr ""
+msgstr "דירה דאווה"
 
 #. Name for ET-GA
 msgid "Gambēla Hizboch"
-msgstr ""
+msgstr "גמבלה"
 
 #. Name for ET-HA
 msgid "Hārerī Hizb"
-msgstr ""
+msgstr "הררי"
 
 #. Name for ET-OR
 msgid "Oromīya"
-msgstr ""
+msgstr "אורומיה"
 
 #. Name for ET-SN
 msgid "YeDebub Bihēroch Bihēreseboch na Hizboch"
-msgstr ""
+msgstr "מדינת האומות, הלאומים ועמי הדרום"
 
 #. Name for ET-SO
 msgid "Sumalē"
-msgstr ""
+msgstr "סומלי"
 
 #. Name for ET-TI
 msgid "Tigray"
-msgstr ""
+msgstr "תיגראי"
 
 #. Name for FI-01
 msgid "Ahvenanmaan maakunta"
@@ -6777,7 +6777,7 @@ msgstr ""
 
 #. Name for GT-GU
 msgid "Guatemala"
-msgstr ""
+msgstr "גואטמלה"
 
 #. Name for GT-HU
 msgid "Huehuetenango"
@@ -10713,11 +10713,11 @@ msgstr "מונטה קרלו"
 
 #. Name for MC-MG
 msgid "Moneghetti"
-msgstr ""
+msgstr "מונגטי"
 
 #. Name for MC-MO
 msgid "Monaco-Ville"
-msgstr ""
+msgstr "מונקו ויל"
 
 #. Name for MC-MU
 msgid "Moulins"
@@ -10753,15 +10753,15 @@ msgstr ""
 
 #. Name for MD-BA
 msgid "Bălți"
-msgstr ""
+msgstr "בלץ"
 
 #. Name for MD-BD
 msgid "Tighina"
-msgstr ""
+msgstr "טיגינה"
 
 #. Name for MD-BR
 msgid "Briceni"
-msgstr ""
+msgstr "בריצ׳ני"
 
 #. Name for MD-BS
 msgid "Basarabeasca"
@@ -10793,7 +10793,7 @@ msgstr ""
 
 #. Name for MD-CU
 msgid "Chișinău"
-msgstr ""
+msgstr "קישינב"
 
 #. Name for MD-DO
 msgid "Dondușeni"
@@ -13725,27 +13725,27 @@ msgstr ""
 
 #. Name for PK-BA
 msgid "Balochistan"
-msgstr ""
+msgstr "בלוצ׳יסטן"
 
 #. Name for PK-GB
 msgid "Gilgit-Baltistan"
-msgstr ""
+msgstr "גילגיט-בלטיסטן"
 
 #. Name for PK-IS
 msgid "Islamabad"
-msgstr ""
+msgstr "אסלאמאבאד"
 
 #. Name for PK-JK
 msgid "Azad Kashmir"
-msgstr ""
+msgstr "אזאד קשמיר"
 
 #. Name for PK-KP
 msgid "Khyber Pakhtunkhwa"
-msgstr ""
+msgstr "ח׳ייבר פח׳טונח׳ווה"
 
 #. Name for PK-SD
 msgid "Sindh"
-msgstr ""
+msgstr "סינד"
 
 #. Name for PK-TA
 msgid "Federally Administered Tribal Areas"
@@ -17985,7 +17985,7 @@ msgstr ""
 
 #. Name for UG-416
 msgid "Ibanda"
-msgstr ""
+msgstr "יבנדה"
 
 #. Name for UG-417
 msgid "Isingiro"
@@ -17997,11 +17997,11 @@ msgstr "קירוהורה"
 
 #. Name for UG-419
 msgid "Buliisa"
-msgstr ""
+msgstr "בוליסה"
 
 #. Name for UM-67
 msgid "Johnston Atoll"
-msgstr ""
+msgstr "אטול ג׳ונסטון"
 
 #. Name for UM-71
 msgid "Midway Islands"
@@ -18257,539 +18257,539 @@ msgstr "ויומינג"
 
 #. Name for UY-AR
 msgid "Artigas"
-msgstr ""
+msgstr "ארטיגס"
 
 #. Name for UY-CA
 msgid "Canelones"
-msgstr ""
+msgstr "קנלונס"
 
 #. Name for UY-CL
 msgid "Cerro Largo"
-msgstr ""
+msgstr "סרו לרגו"
 
 #. Name for UY-CO
 msgid "Colonia"
-msgstr ""
+msgstr "קולוניה"
 
 #. Name for UY-DU
 msgid "Durazno"
-msgstr ""
+msgstr "דורזנו"
 
 #. Name for UY-FS
 msgid "Flores"
-msgstr ""
+msgstr "פלורס"
 
 #. Name for UY-LA
 msgid "Lavalleja"
-msgstr ""
+msgstr "לבז׳חה"
 
 #. Name for UY-MA
 msgid "Maldonado"
-msgstr ""
+msgstr "מלדונדו"
 
 #. Name for UY-MO
 msgid "Montevideo"
-msgstr ""
+msgstr "מונטווידאו"
 
 #. Name for UY-PA
 msgid "Paysandú"
-msgstr ""
+msgstr "פאיסנדו"
 
 #. Name for UY-RN
 msgid "Río Negro"
-msgstr ""
+msgstr "ריו נגרו"
 
 #. Name for UY-RO
 msgid "Rocha"
-msgstr ""
+msgstr "רוצ׳ה"
 
 #. Name for UY-RV
 msgid "Rivera"
-msgstr ""
+msgstr "ריברה"
 
 #. Name for UY-SA
 msgid "Salto"
-msgstr ""
+msgstr "סלטו"
 
 #. Name for UY-SO
 msgid "Soriano"
-msgstr ""
+msgstr "סוריאנו"
 
 #. Name for UY-TA
 msgid "Tacuarembó"
-msgstr ""
+msgstr "טקוארמבו"
 
 #. Name for UY-TT
 msgid "Treinta y Tres"
-msgstr ""
+msgstr "טריינטה אי טרס"
 
 #. Name for UZ-AN
 msgid "Andijon"
-msgstr ""
+msgstr "אנדיז׳ן"
 
 #. Name for UZ-BU
 msgid "Buxoro"
-msgstr ""
+msgstr "בוכרה"
 
 #. Name for UZ-FA
 msgid "Farg'ona"
-msgstr ""
+msgstr "פרגנה"
 
 #. Name for UZ-JI
 msgid "Jizzax"
-msgstr ""
+msgstr "דז׳יזק"
 
 #. Name for UZ-NG
 msgid "Namangan"
-msgstr ""
+msgstr "נמנגן"
 
 #. Name for UZ-NW
 msgid "Navoiy"
-msgstr ""
+msgstr "נבוי"
 
 #. Name for UZ-QA
 msgid "Qashqadaryo"
-msgstr ""
+msgstr "קשקדריה"
 
 #. Name for UZ-QR
 msgid "Qoraqalpog'iston Respublikasi"
-msgstr ""
+msgstr "רפובליקה קרקלפקית"
 
 #. Name for UZ-SA
 msgid "Samarqand"
-msgstr ""
+msgstr "סמרקנד"
 
 #. Name for UZ-SI
 msgid "Sirdaryo"
-msgstr ""
+msgstr "סירדריה"
 
 #. Name for UZ-SU
 msgid "Surxondaryo"
-msgstr ""
+msgstr "סורחנדריה"
 
 #. Name for UZ-TK, Name for UZ-TO
 msgid "Toshkent"
-msgstr ""
+msgstr "טשקנט"
 
 #. Name for UZ-XO
 msgid "Xorazm"
-msgstr ""
+msgstr "חורזם"
 
 #. Name for VC-01
 msgid "Charlotte"
-msgstr ""
+msgstr "שארלוט"
 
 #. Name for VC-06
 msgid "Grenadines"
-msgstr ""
+msgstr "הגרנדינים"
 
 #. Name for VE-B
 msgid "Anzoátegui"
-msgstr ""
+msgstr "אנסואטגי"
 
 #. Name for VE-C
 msgid "Apure"
-msgstr ""
+msgstr "אפורה"
 
 #. Name for VE-D
 msgid "Aragua"
-msgstr ""
+msgstr "ארגואה"
 
 #. Name for VE-E
 msgid "Barinas"
-msgstr ""
+msgstr "ברינס"
 
 #. Name for VE-G
 msgid "Carabobo"
-msgstr ""
+msgstr "קרבובו"
 
 #. Name for VE-H
 msgid "Cojedes"
-msgstr ""
+msgstr "קוחדס"
 
 #. Name for VE-I
 msgid "Falcón"
-msgstr ""
+msgstr "פלקון"
 
 #. Name for VE-J
 msgid "Guárico"
-msgstr ""
+msgstr "גואריקו"
 
 #. Name for VE-K
 msgid "Lara"
-msgstr ""
+msgstr "לרה"
 
 #. Name for VE-L
 msgid "Mérida"
-msgstr ""
+msgstr "מרידה"
 
 #. Name for VE-M
 msgid "Miranda"
-msgstr ""
+msgstr "מירנדה"
 
 #. Name for VE-N
 msgid "Monagas"
-msgstr ""
+msgstr "מונגס"
 
 #. Name for VE-O
 msgid "Nueva Esparta"
-msgstr ""
+msgstr "נואבה אספרטה"
 
 #. Name for VE-P
 msgid "Portuguesa"
-msgstr ""
+msgstr "פורטוגסה"
 
 #. Name for VE-S
 msgid "Táchira"
-msgstr ""
+msgstr "טאצ׳ירה"
 
 #. Name for VE-T
 msgid "Trujillo"
-msgstr ""
+msgstr "טרוחיו"
 
 #. Name for VE-U
 msgid "Yaracuy"
-msgstr ""
+msgstr "יארקוי"
 
 #. Name for VE-V
 msgid "Zulia"
-msgstr ""
+msgstr "סוליה"
 
 #. Name for VE-W
 msgid "Dependencias Federales"
-msgstr ""
+msgstr "הדפנדנסיות הפדרליות"
 
 #. Name for VE-X
 msgid "Vargas"
-msgstr ""
+msgstr "ורגאס"
 
 #. Name for VE-Y
 msgid "Delta Amacuro"
-msgstr ""
+msgstr "דלטה אמקורו"
 
 #. Name for VN-01
 msgid "Lai Châu"
-msgstr ""
+msgstr "לאי צ׳או"
 
 #. Name for VN-02
 msgid "Lào Cai"
-msgstr ""
+msgstr "לאו קאי"
 
 #. Name for VN-03
 msgid "Hà Giang"
-msgstr ""
+msgstr "הא זאנג"
 
 #. Name for VN-04
 msgid "Cao Bằng"
-msgstr ""
+msgstr "קאו באנג"
 
 #. Name for VN-05
 msgid "Sơn La"
-msgstr ""
+msgstr "סן לה"
 
 #. Name for VN-06
 msgid "Yên Bái"
-msgstr ""
+msgstr "יין באי"
 
 #. Name for VN-07
 msgid "Tuyên Quang"
-msgstr ""
+msgstr "טויין קואנג"
 
 #. Name for VN-09
 msgid "Lạng Sơn"
-msgstr ""
+msgstr "לאנג סן"
 
 #. Name for VN-13
 msgid "Quảng Ninh"
-msgstr ""
+msgstr "קואנג נינג"
 
 #. Name for VN-14
 msgid "Hoà Bình"
-msgstr ""
+msgstr "הואה בינג"
 
 #. Name for VN-15
 msgid "Hà Tây"
-msgstr ""
+msgstr "הא טאי"
 
 #. Name for VN-18
 msgid "Ninh Bình"
-msgstr ""
+msgstr "נינג בינג"
 
 #. Name for VN-20
 msgid "Thái Bình"
-msgstr ""
+msgstr "טהאי בינג"
 
 #. Name for VN-21
 msgid "Thanh Hóa"
-msgstr ""
+msgstr "טהאינג הואה"
 
 #. Name for VN-22
 msgid "Nghệ An"
-msgstr ""
+msgstr "נגה אן"
 
 #. Name for VN-23
 msgid "Hà Tỉnh"
-msgstr ""
+msgstr "הא טינג"
 
 #. Name for VN-24
 msgid "Quảng Bình"
-msgstr ""
+msgstr "קואנג בין"
 
 #. Name for VN-25
 msgid "Quảng Trị"
-msgstr ""
+msgstr "קואנג צ׳י"
 
 #. Name for VN-26
 msgid "Thừa Thiên-Huế"
-msgstr ""
+msgstr "טהיאה טהיין-הואה"
 
 #. Name for VN-27
 msgid "Quảng Nam"
-msgstr ""
+msgstr "קואנג נאם"
 
 #. Name for VN-28
 msgid "Kon Tum"
-msgstr ""
+msgstr "קון טום"
 
 #. Name for VN-29
 msgid "Quảng Ngãi"
-msgstr ""
+msgstr "קואנג נגאי"
 
 #. Name for VN-30
 msgid "Gia Lai"
-msgstr ""
+msgstr "יה לאי"
 
 #. Name for VN-31
 msgid "Bình Định"
-msgstr ""
+msgstr "בין דין"
 
 #. Name for VN-32
 msgid "Phú Yên"
-msgstr ""
+msgstr "פו יין"
 
 #. Name for VN-33
 msgid "Đắc Lắk"
-msgstr ""
+msgstr "דאקלאק"
 
 #. Name for VN-34
 msgid "Khánh Hòa"
-msgstr ""
+msgstr "קהאן הואה"
 
 #. Name for VN-35
 msgid "Lâm Đồng"
-msgstr ""
+msgstr "לם דאונגם"
 
 #. Name for VN-36
 msgid "Ninh Thuận"
-msgstr ""
+msgstr "נין טהואנג"
 
 #. Name for VN-37
 msgid "Tây Ninh"
-msgstr ""
+msgstr "טאי נין"
 
 #. Name for VN-39
 msgid "Đồng Nai"
-msgstr ""
+msgstr "דג׳ונג נאי"
 
 #. Name for VN-40
 msgid "Bình Thuận"
-msgstr ""
+msgstr "בין טהואנג"
 
 #. Name for VN-41
 msgid "Long An"
-msgstr ""
+msgstr "לאונגם אנג"
 
 #. Name for VN-43
 msgid "Bà Rịa-Vũng Tàu"
-msgstr ""
+msgstr "בה ז׳יה-וונגם טאו"
 
 #. Name for VN-44
 msgid "An Giang"
-msgstr ""
+msgstr "אנג יאנג"
 
 #. Name for VN-45
 msgid "Đồng Tháp"
-msgstr ""
+msgstr "דאונגם טהאפ"
 
 #. Name for VN-46
 msgid "Tiền Giang"
-msgstr ""
+msgstr "טיין יאנג"
 
 #. Name for VN-47
 msgid "Kiên Giang"
-msgstr ""
+msgstr "קיינג יאנג"
 
 #. Name for VN-49
 msgid "Vĩnh Long"
-msgstr ""
+msgstr "וין לאונגם"
 
 #. Name for VN-50
 msgid "Bến Tre"
-msgstr ""
+msgstr "בן צ׳ה"
 
 #. Name for VN-51
 msgid "Trà Vinh"
-msgstr ""
+msgstr "צ׳ה וין"
 
 #. Name for VN-52
 msgid "Sóc Trăng"
-msgstr ""
+msgstr "שאוקפ צ׳אנג"
 
 #. Name for VN-53
 msgid "Bắc Kạn"
-msgstr ""
+msgstr "באק קאן"
 
 #. Name for VN-54
 msgid "Bắc Giang"
-msgstr ""
+msgstr "באק זאנג"
 
 #. Name for VN-55
 msgid "Bạc Liêu"
-msgstr ""
+msgstr "בק ליאו"
 
 #. Name for VN-56
 msgid "Bắc Ninh"
-msgstr ""
+msgstr "באק נינג"
 
 #. Name for VN-57
 msgid "Bình Dương"
-msgstr ""
+msgstr "בין ייאנג"
 
 #. Name for VN-58
 msgid "Bình Phước"
-msgstr ""
+msgstr "בין פייק"
 
 #. Name for VN-59
 msgid "Cà Mau"
-msgstr ""
+msgstr "קה מאו"
 
 #. Name for VN-61
 msgid "Hải Duong"
-msgstr ""
+msgstr "האי זיינג"
 
 #. Name for VN-63
 msgid "Hà Nam"
-msgstr ""
+msgstr "הא נאם"
 
 #. Name for VN-66
 msgid "Hưng Yên"
-msgstr ""
+msgstr "הונגם יין"
 
 #. Name for VN-67
 msgid "Nam Định"
-msgstr ""
+msgstr "נאם דינג"
 
 #. Name for VN-68
 msgid "Phú Thọ"
-msgstr ""
+msgstr "פו טהו"
 
 #. Name for VN-69
 msgid "Thái Nguyên"
-msgstr ""
+msgstr "טהאי נגויין"
 
 #. Name for VN-70
 msgid "Vĩnh Phúc"
-msgstr ""
+msgstr "וינג פוקפ"
 
 #. Name for VN-71
 msgid "Điện Biên"
-msgstr ""
+msgstr "דיין ביין"
 
 #. Name for VN-72
 msgid "Đắk Nông"
-msgstr ""
+msgstr "דאק נאונגם"
 
 #. Name for VN-73
 msgid "Hậu Giang"
-msgstr ""
+msgstr "האו יאנג"
 
 #. Name for VN-CT
 msgid "Cần Thơ"
-msgstr ""
+msgstr "קאנטחו"
 
 #. Name for VN-DN
 msgid "Đà Nẵng"
-msgstr ""
+msgstr "דה נאנג"
 
 #. Name for VN-HN
 msgid "Hà Nội"
-msgstr ""
+msgstr "האנוי"
 
 #. Name for VN-HP
 msgid "Hải Phòng"
-msgstr ""
+msgstr "האי פאונגם"
 
 #. Name for VN-SG
 msgid "Hồ Chí Minh [Sài Gòn]"
-msgstr ""
+msgstr "הו צ׳י מין סיטי [סייגון]"
 
 #. Name for VU-MAP
 msgid "Malampa"
-msgstr ""
+msgstr "מלמפה"
 
 #. Name for VU-PAM
 msgid "Pénama"
-msgstr ""
+msgstr "פנמה"
 
 #. Name for VU-SAM
 msgid "Sanma"
-msgstr ""
+msgstr "סנמה"
 
 #. Name for VU-SEE
 msgid "Shéfa"
-msgstr ""
+msgstr "שפה"
 
 #. Name for VU-TAE
 msgid "Taféa"
-msgstr ""
+msgstr "טפאע"
 
 #. Name for VU-TOB
 msgid "Torba"
-msgstr ""
+msgstr "טורבה"
 
 #. Name for WS-AA
 msgid "A'ana"
-msgstr ""
+msgstr "א׳אנה"
 
 #. Name for WS-AL
 msgid "Aiga-i-le-Tai"
-msgstr ""
+msgstr "איגה י לה טאי"
 
 #. Name for WS-AT
 msgid "Atua"
-msgstr ""
+msgstr "אטוא"
 
 #. Name for WS-FA
 msgid "Fa'asaleleaga"
-msgstr ""
+msgstr "פא׳אסאלהלהאגה"
 
 #. Name for WS-GE
 msgid "Gaga'emauga"
-msgstr ""
+msgstr "גגאמאוגה"
 
 #. Name for WS-GI
 msgid "Gagaifomauga"
-msgstr ""
+msgstr "גגאיפומאוגה"
 
 #. Name for WS-PA
 msgid "Palauli"
-msgstr ""
+msgstr "פלאולי"
 
 #. Name for WS-SA
 msgid "Satupa'itea"
-msgstr ""
+msgstr "סטופאיטאה"
 
 #. Name for WS-TU
 msgid "Tuamasaga"
-msgstr ""
+msgstr "טואמסגה"
 
 #. Name for WS-VF
 msgid "Va'a-o-Fonoti"
-msgstr ""
+msgstr "ווה או פונוטי"
 
 #. Name for WS-VS
 msgid "Vaisigano"
-msgstr ""
+msgstr "ואיסיגנו"
 
 #. Name for YE-AB
 msgid "Abyān"
@@ -18869,96 +18869,96 @@ msgstr "תעז"
 
 #. Name for ZA-EC
 msgid "Eastern Cape"
-msgstr ""
+msgstr "הכף המזרחי"
 
 #. Name for ZA-FS
 msgid "Free State"
-msgstr ""
+msgstr "המדינה החופשית"
 
 #. Name for ZA-GT
 msgid "Gauteng"
-msgstr ""
+msgstr "חאוטנג"
 
 #. Name for ZA-LP
 msgid "Limpopo"
-msgstr ""
+msgstr "לימפופו"
 
 #. Name for ZA-MP
 msgid "Mpumalanga"
-msgstr ""
+msgstr "מפומלנגה"
 
 #. Name for ZA-NC
 msgid "Northern Cape"
-msgstr ""
+msgstr "הכף הצפוני"
 
 #. Name for ZA-NL
 msgid "Kwazulu-Natal"
-msgstr ""
+msgstr "קוואזולו-נטאל"
 
 #. Name for ZA-NW
 msgid "North-West (South Africa)"
-msgstr ""
+msgstr "צפון מערב (דרום אפריקה)"
 
 #. Name for ZA-WC
 msgid "Western Cape"
-msgstr ""
+msgstr "הכף המערבי"
 
 #. Name for ZM-04
 msgid "Luapula"
-msgstr ""
+msgstr "לואפולה"
 
 #. Name for ZM-06
 msgid "North-Western"
-msgstr ""
+msgstr "צפון-מערב"
 
 #. Name for ZM-07
 msgid "Southern (Zambia)"
-msgstr ""
+msgstr "הדרום (זימבבואה)"
 
 #. Name for ZM-08
 msgid "Copperbelt"
-msgstr ""
+msgstr "טבעת הנחושת"
 
 #. Name for ZM-09
 msgid "Lusaka"
-msgstr ""
+msgstr "לוסקה"
 
 #. Name for ZW-BU
 msgid "Bulawayo"
-msgstr ""
+msgstr "בולוואיו"
 
 #. Name for ZW-HA
 msgid "Harare"
-msgstr ""
+msgstr "הארארה"
 
 #. Name for ZW-MA
 msgid "Manicaland"
-msgstr ""
+msgstr "מניקלנד"
 
 #. Name for ZW-MC
 msgid "Mashonaland Central"
-msgstr ""
+msgstr "משונלנד-מרכז"
 
 #. Name for ZW-ME
 msgid "Mashonaland East"
-msgstr ""
+msgstr "משונלנד-מזרח"
 
 #. Name for ZW-MI
 msgid "Midlands"
-msgstr ""
+msgstr "מידלנדס"
 
 #. Name for ZW-MN
 msgid "Matabeleland North"
-msgstr ""
+msgstr "מטבללנד-צפון"
 
 #. Name for ZW-MS
 msgid "Matabeleland South"
-msgstr ""
+msgstr "מטבללנד-דרום"
 
 #. Name for ZW-MV
 msgid "Masvingo"
-msgstr ""
+msgstr "מסבינגו"
 
 #. Name for ZW-MW
 msgid "Mashonaland West"
-msgstr ""
+msgstr "משונלנד-מערב"
