--- a/messages/es/LC_MESSAGES/15924.po
+++ b/messages/es/LC_MESSAGES/15924.po
@@ -6,7 +6,7 @@
 # Copyright ©
 # Dr. Tobias Quathamer <toddy@debian.org>, 2007.
 # Rodrigo Lledó <rodhos92@gmail.com>, 2019.
-# Adolfo Jayme Barrientos <fitojb@ubuntu.com>, 2019.
+# Adolfo Jayme Barrientos <fitojb@ubuntu.com>, 2019, 2021.
 # Guillermo Segovia <gsegovia2018@my.fit.edu>, 2019.
 msgid ""
 msgstr ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2019-11-06 19:04+0000\n"
+"PO-Revision-Date: 2021-05-24 20:33+0000\n"
 "Last-Translator: Adolfo Jayme Barrientos <fitojb@ubuntu.com>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/iso-codes/"
 "iso-15924/es/>\n"
@@ -23,7 +23,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.10-dev\n"
+"X-Generator: Weblate 4.7-dev\n"
 
 #. Name for Adlm
 msgid "Adlam"
@@ -175,7 +175,7 @@ msgstr "jeroglíficos egipcios"
 
 #. Name for Elba
 msgid "Elbasan"
-msgstr "Elbasanés"
+msgstr "Elbasan"
 
 #. Name for Ethi
 msgid "Ethiopic (Geʻez)"
