--- a/messages/he/LC_MESSAGES/15924.po
+++ b/messages/he/LC_MESSAGES/15924.po
@@ -5,14 +5,14 @@
 # .
 # Copyright ©
 # Dr. Tobias Quathamer <toddy@debian.org>, 2007.
-# Yaron Shahrabani <sh.yaron@gmail.com>, 2018, 2020.
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2018, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_15924\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-09-22 14:39+0000\n"
+"PO-Revision-Date: 2021-05-02 12:32+0000\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <https://hosted.weblate.org/projects/iso-codes/"
 "iso-15924/he/>\n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n == 1) ? 0 : ((n == 2) ? 1 : ((n > 10 && "
 "n % 10 == 0) ? 2 : 3));\n"
-"X-Generator: Weblate 4.3-dev\n"
+"X-Generator: Weblate 4.7-dev\n"
 
 #. Name for Adlm
 msgid "Adlam"
@@ -176,7 +176,7 @@ msgstr "כתב חרטומים"
 
 #. Name for Elba
 msgid "Elbasan"
-msgstr ""
+msgstr "אלבסן"
 
 #. Name for Ethi
 #, fuzzy
