--- a/messages/hi/LC_MESSAGES/3166-3.po
+++ b/messages/hi/LC_MESSAGES/3166-3.po
@@ -5,29 +5,31 @@
 # This file is distributed under the same license as the iso-codes package.
 # .
 # Notes:
-#   Data taken from ICU-2.8; originally from:
-#   - Shehnaz Nagpurwala and Anwar Nagpurwala [first version]
-#   - IBM NLTC:  http://w3.torolab.ibm.com/gcoc/documents/india/hi-nlsgg.htm
-#   - Arundhati Bhowmick [IBM Cupertino]
+# Data taken from ICU-2.8; originally from:
+# - Shehnaz Nagpurwala and Anwar Nagpurwala [first version]
+# - IBM NLTC:  http://w3.torolab.ibm.com/gcoc/documents/india/hi-nlsgg.htm
+# - Arundhati Bhowmick [IBM Cupertino]
 # .
 # Copyright ©
 # Alastair McKinstry <mckinstry@debian.org>, 2004.
 # Kumar Appaiah <kumar.appaiah@gmail.com>, 2008, 2013.
+# KushagraKarira <kushagrakarira@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-3\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2013-02-12 08:02-0600\n"
-"Last-Translator: Kumar Appaiah\n"
-"Language-Team: American English <kde-i18n-doc@kde.org>\n"
+"PO-Revision-Date: 2021-05-26 12:32+0000\n"
+"Last-Translator: KushagraKarira <kushagrakarira@gmail.com>\n"
+"Language-Team: Hindi <https://hosted.weblate.org/projects/iso-codes/"
+"iso-3166-3/hi/>\n"
 "Language: hi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.4\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.7-dev\n"
 
 #. Name for AIDJ
 msgid "French Afars and Issas"
@@ -143,7 +145,7 @@ msgstr "वेक ो आइलैंड्स"
 
 #. Name for YDYE
 msgid "Yemen, Democratic, People's Democratic Republic of"
-msgstr "येमेन, डेमोक्रेटिक, डेमोक्रेटिक पीपल्स रिपब्लिक ऑफ"
+msgstr "यमन, डेमोक्रेटिक, पीपुल्स डेमोक्रेटिक रिपब्लिक ऑफ"
 
 #. Name for YUCS
 msgid "Yugoslavia, Socialist Federal Republic of"
