--- a/messages/hi/LC_MESSAGES/639-2.po
+++ b/messages/hi/LC_MESSAGES/639-2.po
@@ -6,19 +6,23 @@
 # .
 # Copyright ©
 # Alastair McKinstry <mckinstry@debian.org>, 2004.
+# Chris Leonard <cjlhomeaddress@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2004-08-07 21:21+0100\n"
-"Last-Translator: Alastair McKinstry <mckinstry@debian.org>\n"
-"Language-Team: Hindi\n"
-"Language: \n"
+"PO-Revision-Date: 2021-05-26 12:32+0000\n"
+"Last-Translator: Chris Leonard <cjlhomeaddress@gmail.com>\n"
+"Language-Team: Hindi <https://hosted.weblate.org/projects/iso-codes/"
+"iso-639-2/hi/>\n"
+"Language: hi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 4.7-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -1259,7 +1263,7 @@ msgstr ""
 
 #. Name for nau
 msgid "Nauru"
-msgstr "नायरू"
+msgstr "नौरु"
 
 #. Name for nav
 msgid "Navajo; Navaho"
@@ -1856,7 +1860,7 @@ msgstr "कोरीयन्"
 
 #. Name for tvl
 msgid "Tuvalu"
-msgstr ""
+msgstr "तुवालू"
 
 #. Name for twi
 msgid "Twi"
