--- a/messages/pt/LC_MESSAGES/15924.po
+++ b/messages/pt/LC_MESSAGES/15924.po
@@ -7,14 +7,14 @@
 # Dr. Tobias Quathamer <toddy@debian.org>, 2007.
 # Rui Mendes <xz9@protonmail.com>, 2019.
 # Manuela Silva <mmsrs@sky.com>, 2020.
-# ssantos <ssantos@web.de>, 2020.
+# ssantos <ssantos@web.de>, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_15924\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-08-30 19:37+0000\n"
+"PO-Revision-Date: 2021-05-02 12:32+0000\n"
 "Last-Translator: ssantos <ssantos@web.de>\n"
 "Language-Team: Portuguese <https://hosted.weblate.org/projects/iso-codes/"
 "iso-15924/pt/>\n"
@@ -23,7 +23,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.2.1-dev\n"
+"X-Generator: Weblate 4.7-dev\n"
 
 #. Name for Adlm
 msgid "Adlam"
@@ -103,7 +103,7 @@ msgstr "braile"
 
 #. Name for Bugi
 msgid "Buginese"
-msgstr "buginês"
+msgstr "Buginês"
 
 #. Name for Buhd
 msgid "Buhid"
@@ -536,7 +536,7 @@ msgstr "Pálavi livro"
 
 #. Name for Phnx
 msgid "Phoenician"
-msgstr "fenício"
+msgstr "Fenício"
 
 #. Name for Piqd
 msgid "Klingon (KLI pIqaD)"
@@ -660,7 +660,7 @@ msgstr "novo tai lue"
 
 #. Name for Taml
 msgid "Tamil"
-msgstr "tâmil"
+msgstr "Tâmil"
 
 #. Name for Tang
 msgid "Tangut"
@@ -710,7 +710,7 @@ msgstr "ugarítico"
 
 #. Name for Vaii
 msgid "Vai"
-msgstr "vai"
+msgstr "Vai"
 
 #. Name for Visp
 msgid "Visible Speech"
